Add pagination to Ledger
